fix: #15 dropdownBox에 z-index추가

--- a/src/component/dropdown/dropdown.module.css
+++ b/src/component/dropdown/dropdown.module.css
@@ -1,6 +1,7 @@
 .dropdownBox {
   display: flex;
   position: absolute;
+  z-index: 1;
   top: 120%;
   left: 0%;
   flex-direction: column;
